...
  "password": "Password",
  "showPassword": "Show password",
  "hidePassword": "Hide password",
  "pleaseEnterYourPassword": "Please enter your password",
  "username": "Username",
  "pleaseEnterYourUsername": "Please enter your username",
  "login": "Login",
  "home": "Home",
  "verse": "Verse",
  "ref": "Ref",
  "settings": "Settings"
}
