# To launch with different flavors:
# Development: maestro test --app-id com.spiritflightapps.memverse maestro/flows/login.yaml
# Staging: maestro test --app-id com.spiritflightapps.memverse maestro/flows/login.yaml  
# Production: maestro test --app-id com.spiritflightapps.memverse maestro/flows/login.yaml

appId: com.spiritflightapps.memverse
name: Login Test Flow
tags:
  - login
  - auth

env:
  USERNAME: njwandroid@gmail.com
  PASSWORD: ${MEMVERSE_PASSWORD}

onFlowStart:
  - launchApp:
      clearState: true
      clearKeychain: true

---
# Default successful login flow
- takeScreenshot: "initial_screen"
- inputText:
    text: ${USERNAME}
    id: "textUsername"
- inputText:
    text: ${PASSWORD}
    id: "textPassword"
- takeScreenshot: "filled_credentials"
- tapOn:
    text: "Login"
- waitForAnimationToEnd
- takeScreenshot: "logged_in"
